--- a/index.html
+++ b/index.html
@@ -1,187 +1,11 @@
 <!DOCTYPE html>
-<html 
+<html> 
 <head>
 <meta charset="UTF-8">
-<title>TRÀ VINH</title>
+<title>THIẾT KẾ WEB</title>
 
-<style>
-body{
-  margin:0;
-  font-family:"Times New Roman", serif;
-  background-image: url("TV.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
-}
-
-.menu{
-  background:white;
-  text-align:center;
-  padding:10px;
-}
-
-.menu-group{
-  display: inline-block;       
-}
-
-.menu span{
-  color:brown;
-  font-weight:bold;
-  margin:0 20px;
-  cursor:pointer;
-   padding: 10px 15px;
-  display: inline-block;
-
-  border: 2px solid #FFD700;
-  border-radius: 50px;
-  background-color: #fff8dc;
-
-  text-shadow:
-    -1px -1px 0 #FFD700,
-     1px -1px 0 #FFD700,
-    -1px  1px 0 #FFD700,
-     1px  1px 0 #FFD700;
-}
-
- /*khung chính*/
-.wrapper{
-  background:white;
-  margin:10px;
-  padding:15px;
-  border:15px dotted white;
-  border-radius: 30px;
-  overflow: visible;
-  
-}
-
-.box{
-  background:#cceeff;
-  padding:15px;
-  margin-bottom:10px;
-  border:2px solid brown;
-}
-
-.box p 
-{
-text-align: justify;
-line-height: 1.6;
-}
-
-#videoBox /* video biển 3 động*/
-{
-  text-align: center;
-}
-
-#videoBox object{
-  display: block;
-  margin: 0 auto;
-}
-
-.box p::first-letter {
-  float: left;
-  font-size: 48px;
-  line-height: 1;
-  padding-right: 8px;
-  font-weight: bold;
-}
-
-.dropcap {
-  float: left;
-  font-size: 48px;
-  line-height: 1;
-  padding-right: 8px;
-  font-weight: bold;
-}
-
-h1
-{  color: #2E7D32;       
-  font-size: 42px; 
-  margin-top: -10px;
-  margin-bottom: 20px;      
-  text-align: center;
-   
-  text-shadow:
-    -1px -1px 0 #FFE0B2,
-     1px -1px 0 #FFE0B2,
-    -1px  1px 0 #FFE0B2,
-     1px  1px 0 #FFE0B2;
-}
-
-h2,h3{
-  text-align:left;
-}
-
-.hidden{
-  display:none;
-}
-
-ul li{
-  font-size:18px;
-  cursor:pointer;
-  margin-bottom: 12px;
-}
-
-.img-row{
-  display:flex;
-  gap:20px;
-  justify-content:center;
-  flex-wrap:wrap;
-}
-
-figure{
-  text-align:center;
-}
-
-figcaption{
-  font-style:italic;
-  margin-top:6px;
-}
-
-.table-white{
-  background: white;
-  border-collapse: collapse;
-  border: 3px solid #333;
-}
-
-.table-white th,
-.table-white td
-{
-  background: white;
-}
-
-footer{
-  background:#ffffffcc;   
-  color:gray;
-  font-style:italic;
-  text-align:center;
-  padding:15px;
-  margin-top:18px;
-  margin-bottom:-15px;
-  border-top:2px solid #ccc;
-}
-
-</style>
-
-<script>
-function showMenu(id){
-  let boxes = document.getElementsByClassName("menuBox");
-  for(let i = 0; i < boxes.length; i++){
-    boxes[i].style.display = "none";
-  }
-  document.getElementById(id).style.display = "block";
-}
-
-function showSection(id){
-  let sections = document.getElementsByClassName("detail");
-  for(let i = 0; i < sections.length; i++)
-  {
-    sections[i].style.display = "none";
-  }
-  document.getElementById(id).style.display = "block";
-}
-</script>
-
+<link rel="stylesheet" href="css/style.css">
+<script src="js/main.js" defer></script>
 
 </head>
 
@@ -190,108 +14,182 @@ function showSection(id){
 <!MENU>
 <div class="menu">
   <div class="menu-group">
-   <span onclick="showMenu('videoBox')">BIỂN BA ĐỘNG</span>
-   <span onclick="showMenu('imageBox')">NHỮNG DI TÍCH Ở TRÀ VINH</span>
-   <span onclick="showMenu('traVinhBox')">THÔNG TIN</span>
+   <span onclick="showMenu('videoBox')">TRẢI NGHIỆM</span>
+   <span onclick="showMenu('imageBox')">ĐỊA ĐIỂM NỔI TIẾNG QUÊ TÔI</span>
+   <span onclick="showMenu('traVinhBox')">THỜI GIAN HỌC TRONG TUẦN</span>
   </div>
 </div>
 <div class="wrapper">
 
-<h1>TRÀ VINH</h1>
+<h1>GIỚI THIỆU</h1>
 
-<!GIOI THIEU SƠ LUOC VE TRA VINH >
+<!GIOI THIEU BAN THAN >
 <div class="box">
-<h2>VÀI NÉT VỀ TRÀ VINH</h2>
+<h2>GIỚI THIỆU BẢN THÂN</h2>
 <p>
- <strong>Trà Vinh</strong> là một tỉnh được biết đến với cái tên vùng đất xanh. Nơi đây nổi tiếng với hệ thống chùa Khmer độc đáo,
-    phản ánh rõ nét bản sắc văn hóa của đồng bào Khmer Nam Bộ. <b>Trà Vinh</b> còn có
-    nhiều vườn cây ăn trái, cảnh quan yên bình và con người hiền hòa, mến khách.
+ Xin chào!  Tôi tên là <strong>Lâm Trần Quế Chi</strong>, hiện là sinh viên Khoa Kỹ thuật và Công nghệ của Đại học Trà Vinh, chuyên ngành Công nghệ Thông tin. Tôi có niềm yêu thích với lập trình, thiết kế web và các ứng dụng công nghệ trong thực tiễn
  
 <p>
-    Trước đây <b>Trà Vinh</b> là một tỉnh thuộc vùng Đồng bằng sông Cửu Long, nằm giữa
-    sông Tiền và sông Hậu. Theo định hướng phát triển mới, <b>Trà Vinh</b> đã được sáp
-    nhập và nâng cấp, trở thành thành phố, không còn là đơn vị hành chính cấp
-    tỉnh như trước. Sự thay đổi này mở ra nhiều cơ hội trong việc phát triển hạ
-    tầng, kinh tế, giáo dục và du lịch, góp phần nâng cao đời sống của người dân
-    địa phương.
+    Trong quá trình học tập, tôi luôn cố gắng trau dồi kiến thức chuyên môn, rèn luyện kỹ năng và tinh thần tự học. Tôi mong muốn có cơ hội áp dụng những gì đã học vào các dự án thực tế để tích lũy kinh nghiệm và phát triển bản thân.
   </p>
 </p>
 </div>
 
 <div class="box hidden menuBox" id="traVinhBox">
-  <h2>THÔNG TIN TỔNG HỢP VỀ TRÀ VINH</h2>
+  <h2>THỜI GIAN HỌC TRONG TUẦN</h2>
 
-  <table class="table-white" border="1" cellpadding="10" cellspacing="0" width="100%">
-    <!-- Tiêu đề gộp ngang -->
-    <tr style="background:#a5d6a7;">
-      <th colspan="3">THÔNG TIN TỈNH TRÀ VINH</th>
-    </tr>
-
-    <!Thông tin chung>
+  <table border="1" cellpadding="10" cellspacing="0" width="100%">
+    <!-- tiêu đề -->
     <tr>
-      <th rowspan="4">Thông tin chung</th>
-      <td>Tên tỉnh</td>
-      <td>Trà Vinh</td>
-    </tr>
-    <tr>
-      <td>Vùng</td>
-      <td>Đồng bằng sông Cửu Long</td>
-    </tr>
-    <tr>
-      <td>Diện tích</td>
-      <td>Khoảng 2.358 km²</td>
-    </tr>
-    <tr>
-      <td>Dân số</td>
-      <td>Khoảng 1 triệu người</td>
+      <th colspan="8">THỜI KHÓA BIỂU</th>
     </tr>
 
-    <!---------- Văn hóa>
-    <tr>
-      <th rowspan="2">Văn hóa</th>
-      <td>Dân tộc</td>
-      <td>Kinh, Khmer, Hoa</td>
-    </tr>
-    <tr>
-      <td>Lễ hội</td>
-      <td>Ok Om Bok</td>
-    </tr>
+ <tr>
+    <th>Tiết</th>
+    <th>Thứ 2</th>
+    <th>Thứ 3</th>
+    <th>Thứ 4</th>
+    <th>Thứ 5</th>
+    <th>Thứ 6</th>
+    <th>Thứ 7</th>
+    <th>Chủ Nhật</th>
+  </tr>
+  
+ <!-- BUỔI SÁNG -->
+  <tr>
+    <td>1</td>
+ 
+    <td class="xanh" rowspan="4">
+      Mạng máy tính<br>
+      Phòng A42.317<br>
+      GV: Tạ Thanh Hải
+    </td>
 
-    <!-- Du lịch -->
-    <tr>
-      <th rowspan="2">Du lịch</th>
-      <td>Địa điểm</td>
-      <td>Ao Bà Om, Chùa Âng</td>
-    </tr>
-    <tr>
-      <td>Biển</td>
-      <td>Biển Ba Động</td>
-    </tr>
+    <td class="mauvang" rowspan="4">
+      Lý thuyết xếp hàng<br>
+      Phòng D71.112<br>
+      GV: Nguyễn Mộng Hiền
+    </td>
 
-    <!-- Đặc sản gộp ngang -->
-    <tr>
-      <th>Đặc sản</th>
-      <td colspan="2">
-        Bún nước lèo, Bánh tét Trà Cuôn, Dừa sáp
-      </td>
-    </tr>
-  </table>
+    <td class="xanh" rowspan="4">
+      Thiết kế Web<br>
+      Phòng A42.218<br>
+      GV: Nguyễn Ngọc Dan Thanh
+   </td>
+   
+   <td></td> <!-- Thứ 5 -->
+   <td></td>  <!-- Thứ 6 -->
+   
+    <td class="xanh" rowspan="4">  
+      Giáo dục thể chất 2(Cầu lông)<br>
+      Sân thể dục
+    </td>
+
+    <td></td> <!-- Chủ nhật -->
+  </tr>
+
+  <tr>
+    <td>2</td>
+    <td></td><td></td><td></td>
+  </tr>
+  
+  <tr>
+    <td>3</td>
+    <td></td><td></td><td></td>
+  </tr>
+  
+  <tr>
+   <td>4</td>
+   <td></td><td></td><td></td>
+  </tr>
+
+  <!-- TIẾT 5 -->
+  <tr>
+    <td>5</td>
+    <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+  </tr>
+
+  <!--CHIỀU-->
+  <tr>
+    <td>6</td>
+
+    <td class="xanh" rowspan="4">
+      Quy hoạch tuyến tính (110057)<br>
+      Phòng A42.206
+    </td>
+
+    <td class="xanh" rowspan="4">
+      Hệ điều hành (220101)<br>
+      Phòng B21.307
+    </td>
+
+    <td class="xanh" rowspan="4">
+      CNXH khoa học (180052)<br>
+      ONLINE
+    </td>
+
+    <td class="xanh" rowspan="4">
+      Anh văn chuyên ngành CNTT (220250)<br>
+      Phòng A42.218
+    </td>
+
+    <td class="xanh" rowspan="4">
+      Anh văn không chuyên 4 (410294)<br>
+      Phòng D61.203
+    </td>
+
+    <td></td>
+    <td></td>
+  </tr>
+
+  <tr>
+   <td>7</td>
+   <td></td><td></td>
+  </tr>
+  <tr>
+   <td>8</td>
+  <td></td><td></td>
+  </tr>
+  <tr>
+   <td>9</td>
+   <td></td><td></td>
+  </tr>
+
+  <!-- TIẾT 10–13 -->
+  <tr>
+    <td>10</td>
+    <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+  </tr>
+  <tr>
+    <td>11</td>
+    <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+  </tr>
+  <tr>
+    <td>12</td>
+    <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+  </tr>
+  <tr>
+    <td>13</td>
+    <td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+  </tr>
+
+</table>
 </div>
 
 <!VIDEO >
 <div class="box hidden menuBox" id="videoBox">
-<h2>BIỂN BA ĐỘNG</h2>
+<h2>TRẢI NGHIỆM</h2>
 
 <object data="https://drive.google.com/file/d/1uZVeYM8qVwc1O2wZwPGysXfS6npqIiRI/preview"
  width="560" height="315">
 </object>
 
-<figcaption>Biển Ba Động</figcaption>
+<figcaption>Đón bình minh ở biển Ba Động</figcaption>
 </div>
 
 <!ẢNH>
 <div class="box hidden menuBox" id="imageBox">
-<h2>NHỮNG DI TÍCH Ở TRÀ VINH</h2>
+<h2>ĐỊA ĐIỂM NỔI TIẾNG QUÊ TÔI</h2>
 
 <h3 style="font-style:italic; color:gray;"> Click vào các mục dưới đây để xem chi tiết: 
 </h3>
